# conan-spine

./: .gitignore  conanfile.py
src/: CMakeLists.txt  Skeleton.c
test_package/: conanfile.py  example.cpp
